@startuml mw_log_recorders

interface "<<interface>>\nmw::log::Recorder" as Recorder {
  + StartRecord(ctx: std::string_view, log_level: LogLevel): amp::optional<SlotHandle>
  + StopRecord(slot: SlotHandle&): void
  + Log(const SlotHandle&, const T data): void
  + IsLogEnabled(const LogLevel&, const std::string_view): bool
}

interface "<<interface>>\nmw::log::detail::Backend" as Backend {
  + ReserveSlot(): amp::optional<SlotHandle>
  + FlushSlot(slot: const SlotHandle&): void
  + GetLogRecord(slot: const SlotHandle&): LogRecord&
}

class "mw::log::detail::TextRecorder" as TextRecorder {
  - backend_: std::unique_ptr<Backend>
  - config_: Configuration
  - check_log_level_for_console_: bool
  ---
  + TextRecorder(const detail::Configuration&, std::unique_ptr<detail::Backend>, const bool)
  + StartRecord(ctx: std::string_view, const LogLevel): amp::optional<SlotHandle>
  + StopRecord(const SlotHandle&): void
  + IsLogEnabled(const LogLevel&, const std::string_view): bool
  + Log(const SlotHandle&, T data): void
}

class "mw::log::detail::FileRecorder" as FileRecorder {
  - backend_: std::unique_ptr<Backend>
  - config_: Configuration
  ---
  + FileRecorder(const detail::Configuration&, std::unique_ptr<detail::Backend>)
  + StartRecord(ctx: std::string_view, const LogLevel): amp::optional<SlotHandle>
  + StopRecord(const SlotHandle&): void
  + IsLogEnabled(const LogLevel&, const std::string_view): bool
  + Log(const SlotHandle&, T data): void
}

class "mw::log::detail::DataRouterRecorder" as DataRouterRecorder {
}

class "mw::log::detail::EmptyRecorder" as EmptyRecorder {
  + StartRecord(const std::string_view, const LogLevel): amp::optional<SlotHandle>
  + StopRecord(const SlotHandle&): void
  + IsLogEnabled(const LogLevel&, const std::string_view): bool
  + Log(const SlotHandle&, T data): void
}

class "mw::log::detail::CompositeRecorder" as CompositeRecorder {
  - recorders_: std::vector<std::unique_ptr<Recorder>>
  ---
  + CompositeRecorder(std::vector<std::unique_ptr<Recorder>> recorders)
  + StartRecord(const std::string_view, const LogLevel): amp::optional<SlotHandle>
  + StopRecord(slot: SlotHandle&): void
  + GetRecorders(): std::vector<std::unique_ptr<Recorder>>&
  + IsLogEnabled(const LogLevel&, const std::string_view): bool
  + Log(const SlotHandle&, const T): void
}

class "mw::log::detail::FileOutputBackend" as FileOutputBackend {}

class "mw::log::detail::DataRouterBackend" as DataRouterBackend {}

class "mw::log::detail::SlogBackend" as SlogBackend {
  - app_id_: std::string
  - buffer_: CircularAllocator<LogRecord>
  - slog_buffer_: slog2_buffer_t
  - slog_buffer_config_: slog2_buffer_set_config_t
  - slog2_instance_: std::unique_ptr<bmw::os::qnx::Slog2>
  ---
  + SlogBackend(const std::size_t, const LogRecord&, const std::string_view, std::unique_ptr<bmw::os::qnx::Slog2>)
  + ReserveSlot(): amp::optional<SlotHandle>
  + FlushSlot(const SlotHandle&): void
  + GetLogRecord(const SlotHandle&): LogRecord&
  - Init(verbosity: std::uint8_t): void
}

class "mw::log::detail::TextFormat" as TextFormat {
  + PutFormattedTime(VerbosePayload&): void
  + TerminateLog(VerbosePayload&): void
  + Log(VerbosePayload&, const T, const IntegerRepresentation): void
  + Log(VerbosePayload&, const T): void
}

class "mw::log::detail::DLTFormat" as DLTFormat {
  + Log(VerbosePayload&, const bool): AddArgumentResult
  + Log(VerbosePayload&, T, const IntegerRepresentation): AddArgumentResult
}

class "DltArgumentCounter" as DltArgumentCounter {
  - counter_: std::uint8_t&
  ---
  + DltArgumentCounter(std::uint8_t&)
  + TryAddArgument(add_argument_callback): AddArgumentResult
}

class "template <typename T>\nmw::log::detail::CircularAllocator<T>" as CircularAllocator {}

class "mw::log::detail::LogRecord" as LogRecord {}

class "mw::log::detail::RecorderMock" as RecorderMock {}

class "mw::log::detail::BackendMock" as BackendMock {}

package "OSAL" {
  class Unistd {
  }
  class Fcntl {
  }
}

' Interface implementations
Recorder <|.. TextRecorder
Recorder <|.. FileRecorder
Recorder <|.. DataRouterRecorder
Recorder <|.. EmptyRecorder
Recorder <|.. CompositeRecorder
Recorder <|.. RecorderMock

Backend <|.. FileOutputBackend
Backend <|.. DataRouterBackend
Backend <|.. SlogBackend
Backend <|.. BackendMock

' Composition relationships
TextRecorder *-- DltArgumentCounter
TextRecorder *-- TextFormat
TextRecorder *-- SlogBackend

FileRecorder *-- DltArgumentCounter
FileRecorder *-- FileOutputBackend

DataRouterRecorder *-- DataRouterBackend

SlogBackend *-- CircularAllocator

FileRecorder ..> Unistd: close
FileRecorder ..> Fcntl: "Open\nSetNonBlocking fctrl call"
FileRecorder ..> TextFormat: Log
TextRecorder ..> TextFormat: Log

SlogBackend ..> LogRecord: uses
FileRecorder ..> DLTFormat: uses
DataRouterRecorder ..> DLTFormat: uses

note top of CompositeRecorder
  Composite pattern implementation
  that can contain multiple recorders
end note

note right of TextFormat
  Refer text_format.h for all the Log(...)
  - family of functions
end note

note right of Recorder
  Refer Recorder.h for all the Log(const SlotHandle&, const T data)
  - family of functions
end note

note bottom of EmptyRecorder
  No-op implementation for
  performance testing scenarios
end note

@enduml